# torch_numopt

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.rst  modules.rst  requirements.txt  torch_numopt.base_classes.rst  torch_numopt.implemented_algorithms.rst  torch_numopt.rst
examples/: quick_tests.ipynb  quick_tests_agd.ipynb  quick_tests_baseline.ipynb  quick_tests_cg.ipynb  quick_tests_gauss_newton.ipynb  quick_tests_gdls.ipynb  quick_tests_lm.ipynb  quick_tests_mnist_lm.ipynb  quick_tests_newton.ipynb
perf_tests/: perf_test_agd.py  perf_test_gauss_newton.py  perf_test_lm.py  perf_test_newton.py
src/pytorch_soom/: __init__.py  agd_optim.py  gauss_newton_optim.py  lm_avg_optim.py  lm_optim.py  newton_optim.py  second_order_optimizer.py
src/torch_numopt/: __init__.py  agd_optim.py  conjugate_gradient.py  custom_optimizer.py  gauss_newton_optim.py  gradient_descent_lineseach.py  line_search_mixin.py  line_search_optimizer.py  lm_avg_optim.py  lm_optim.py  newton_optim.py  second_order_optimizer.py  utils.py
