[project]
name = "torch_numopt"
version = "0.2.3"
description = "Classic numerical optimizaton methods for Pytorch neural networks"
readme = "README.md"
authors = [
    { name = "eugenioLR", email = "eugeniolorente0@gmail.com" }
]

requires-python = ">=3.10"
dependencies = [
    "torch"
]

[project.optional-dependencies]
dev = [
    "scikit-learn",
    "matplotlib",
    "numpy",
    "sphinx>=7.1.1",
    "sphinx_material",
]

